tests/baselines/reference/objectTypeWithRecursiveWrappedProperty2.errors.txt
==== tests/cases/compiler/objectTypeWithRecursiveWrappedProperty2.ts (1 errors) ====
    // Basic recursive type
    
    class List<T> {
        data: T;
        next: List<List<T>>;
    }
    
    var list1 = new List<number>();
    var list2 = new List<number>();
    var list3 = new List<string>();
    
    list1 = list2; // ok
    list1 = list3; // error
    ~~~~~
!!! objectTypeWithRecursiveWrappedProperty2.ts(13,1): error TS2012: Cannot convert 'List<string>' to 'List<number>':
!!! 	Types of property 'data' of types 'List<string>' and 'List<number>' are incompatible.